--- a/miniprogram/pages/mine/mine.wxml
+++ b/miniprogram/pages/mine/mine.wxml
@@ -1,2 +1,8 @@
-<!--pages/mine/mine.wxml-->
-<text>pages/mine/mine.wxml</text>
+<view class="mine">
+  <view class='mine-img'>
+  <open-data type='userAvatarUrl'></open-data>
+  </view>
+  <view class='mine-name'>
+  <open-data type='userNickName'></open-data>
+  </view>
+</view>
